--- a/practice/index.css
+++ b/practice/index.css
@@ -1,9 +1,20 @@
 body{
     margin:0;
 }
+html{
+    margin: 0;
+}
 
 canvas {
     width: 100vw;
     height: 100vh;
     display: block;
+}
+#matrix{
+    position: fixed;
+    top: 0;
+    right: 0;
+}
+td{
+    max-width: 40px;
 }
